master-depls/k3s-sandbox/k8s-config/manifests/00-common/expose-k3s-sandbox-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: k3s-sandbox-api-ingress
spec:
  rules:
  - host: k3s-sandbox-api.((/secrets/cloudfoundry_ops_domain)) #public dns to access k3s-sandbox externally for ops-domain
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: kubernetes
            port:
              number: 443
